mapeando a exceção de validação
