# service/src/main/java/br/com/sw2you/realmeet/config/ControllerExceptionHandler.java
@@ -1,10 +1,18 @@
 package br.com.sw2you.realmeet.config;
 
+import static br.com.sw2you.realmeet.util.ResponseEntityUtils.notFound;
+
 import br.com.sw2you.realmeet.api.model.ResponseError;
+import br.com.sw2you.realmeet.exception.InvalidRequestException;
 import br.com.sw2you.realmeet.exception.RoomNotFoundException;
+import br.com.sw2you.realmeet.util.ResponseEntityUtils;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
@@ -12,16 +20,17 @@ public class ControllerExceptionHandler {
 
     @ExceptionHandler(RoomNotFoundException.class)
     public ResponseEntity<Object> handleNotFoundException(Exception exception) {
-        return buildResponseEntity(HttpStatus.NOT_FOUND, exception);
+        return notFound();
     }
 
-    private ResponseEntity<Object> buildResponseEntity(HttpStatus httpStatus, Exception exception) {
-        return new ResponseEntity<>(
-            new ResponseError()
-                .status(httpStatus.getReasonPhrase())
-                .code(httpStatus.value())
-                .message(exception.getMessage()),
-            httpStatus
-        );
+    @ExceptionHandler(InvalidRequestException.class)
+    @ResponseBody
+    @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+    public List<ResponseError> handleInvalidRequestException(InvalidRequestException exception) {
+        return exception
+            .getValidatorErrors()
+            .stream()
+            .map(e -> new ResponseError().field(e.getField()).errorCode(e.getErrorCode()))
+            .collect(Collectors.toList());
     }
 }
