# service/src/main/resources/api.yml
@@ -68,7 +68,7 @@ components:
     RoomDTO:
       type: object
       allOf:
-        - $ref:  '#/components/schemas/CreateRoomDTO'
+        - $ref: '#/components/schemas/CreateRoomDTO'
         - type: object
           properties:
             id:
@@ -78,18 +78,21 @@ components:
     ResponseError:
       type: object
       required:
-        - code
-        - message
+        - field
+        - errorCode
       properties:
-        code:
-          type: integer
-          format: int32
-        status:
+        field:
           type: string
-        message:
+        errorCode:
           type: string
 
   responses:
     UnprocessableEntity:
       description: The server understands the content type of the request entity but was unable to process
         the contained instructions.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/ResponseError'
